# FoKL-GPy

./: .gitignore  JAX_Eval.py  LICENSE  README.md  pyomo_maximize.fokl  pyproject.toml  setup.cfg
.github/workflows/: tests.yml
Examples/: Pandas  Pandas.py  test_bssDervs_basis.py
Examples/F16 Vibration/: F16_Vibration.py
Examples/GP Integrate/: GP_integrate_example.py  GP_integrate_example_kwargs  GP_integrate_example_kwargs.py  utest.csv
Examples/Lorenz/: python_test_L96.py
Examples/Sigmoid/: DATA_nois.csv  ReadMe.txt  SigmoidTest.py  SigmoidTest_kwargs  SigmoidTest_kwargs.py  Y.csv
Examples/Sinusoid/: ReadMe.txt  SigmoidTest.py  python_test.py
Examples/clean/: clean.py
Examples/save_and_load_model/: save_and_load_model.py
FoKLTesting/: makingdata.py  requirements.txt  test_FoKL.py  testdatatest.csv
FoKLTesting/.conda/: python.exe.conda_trash  python3.dll.conda_trash
FoKLTesting/.conda/DLLs/: _bz2.pyd.conda_trash  _decimal.pyd.conda_trash  _hashlib.pyd.conda_trash  _overlapped.pyd.conda_trash  _queue.pyd.conda_trash  pyexpat.pyd.conda_trash  select.pyd.conda_trash
FoKLTesting/.tox/py310/: .tox-info.json
dependencies/: ReadMe.txt
dev/electron_telescope/: script.py
dev/electron_telescope/dataset/: ReadMe.txt
dev/electron_telescope/models/: ReadMe.txt
docs/_dev/: in_dev__nomenclature_of_fokl_to_pyomo.ipynb
docs/_dev/basis_coeffs/bernoulli/: BSS-ANOVA__sqrt-eigvals__K-500x500.txt  gram_schmidt_orthogonalization.m  (+2 more)
docs/_dev/langmuir_isotherm/: langmuir_isotherm_with_GP.ipynb  langmuir_isotherm_with_GP__v2.ipynb  langmuir_isotherm_with_GP__v2_nlp.ipynb
docs/basis_coeffs/bernoulli/: bernoulli_scale.py
docs/dependencies/: ReadMe.txt
docs/dev/basis_coeffs/: ReadMe.txt
docs/tutorials/: clean.ipynb  clean.py  fit_and_evaluate.py  fokl_to_pyomo.py
docs/tutorials/save_and_load/: save_and_load.py
examples/GP Integrate/: GP_integrate_example.py  ReadMe.txt  traindata1.txt
examples/Sigmoid/: X.csv
examples/embedded_gp/: CSTR_Reaction_Kinetics.ipynb  CSTR_data_with_noise.csv  run_em.py
examples/fokl_to_pyomo/: fokl_to_pyomo.py
examples/gp_integrate/: gp_integrate.py  traindata2.txt  traininputs.txt  y.txt
examples/isotherm/: isotherm_benchmark.ipynb
examples/jax evaluation/: readme.md  sigmoid_jax_eval.py
examples/pyomo_example/: pyomo_example.fokl  pyomo_example.py
examples/pyomo_example/doc/: problem_statement.tm
examples/pyomo_maximize/: pyomo_maximize.fokl  pyomo_maximize.py
examples/pyomo_maximize/doc/: problem_statement.tm
examples/pyomo_multiple_models/: FoKL__Delta_fG.fokl  FoKL__GmH0_T.fokl  debug_dev.py  dev.py  pyomo_multiple_models.py
examples/sigmoid/: sigmoid.py  updateSig.py
examples/sweep_of_hyperparameters/: sweep_of_hyperparameters.py
src/: __init__.py
src/FoKL/: Embedded_GPs.py  Experimental_Embedded_GPs.py  FoKLRoutines.py  FoKLRoutinesRemoved.py  FoKLRoutines_update.py  FokLRoutines.py  GP_Integrate.py  JAX_Eval.py  __init__.py  config.py  emulator.py  fokl_to_pyomo.py  fokl_to_pyomo_v2.py  getKernels.py  getPhis.py  gibbs.py  loadModel.py  splineConvert500.py  utils.py
src/FoKL/FoKL_Function/: functions.py
src/FoKL/kernels/: BernoulliPolynomials_20_orthonormal.txt  BernoulliPolynomials_20_orthonormal_scaled.txt  bernoulliNumbers258.txt  orthogonal_Bn_scaled.txt
src/FoKL/postprocessing/: postprocessing.py
src/FoKL/preprocessing/: __init__.py  dataFormat.py  kwargProcessing.py
src/FoKL/samplers/: fit.py  gibbs.py  gibbs_Xin_update.py  set_sampler.py
src/FokL/: FokLRoutines.py  GP_Integrate.py  coverage3.py  emulator.py  emulator_func.py  gibbs_func.py  splineConvert500.py
test/: ReadMe.md  get_current_repo_url.py  makingdata.py  requirements.txt  test_FoKL.py  tox.ini
test/.conda/DLLs/: _asyncio.pyd.conda_trash  _ctypes.pyd.conda_trash  _lzma.pyd.conda_trash  _socket.pyd.conda_trash  _sqlite3.pyd.conda_trash  _ssl.pyd.conda_trash  unicodedata.pyd.conda_trash
test/.tox/py310/: pyvenv.cfg
tests/bss_derivatives/: test_bssDervs_basis.py  test_bssDervs_model.py
(+33 files in other folders)
