[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"
[tool.setuptools_scm]

[project]
name = "FoKL"
authors = [
    {name = "ESMS Group", email = "derek.slack.001@gmail.com"},
]
description = "Karhunen Loève decomposed Gaussian processes with forward variable selection"

long_description = "Karhunen Loève decomposed Gaussian processes with forward variable selection. Use this repository for scalable GP regression and fast inference on static and dynamic datasets.
\n Please cite: K. Hayes, M.W. Fouts, A. Baheri and D.S. Mebane, \"Forward variable selection enables fast and accurate dynamic system identification with Karhunen-Loève decomposed Gaussian processes\", arXiv:2205.13676
\n Credits: David Mebane (ideas and original code), Kyle Hayes (integrator), Derek Slack (Python porting)
\n Funding provided by National Science Foundation, Award No. 2119688"

readme = "ReadMe.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "requests",
    'importlib-metadata; python_version<"3.8"',
]
dynamic = ["version"]


