[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"
[tool.setuptools_scm]

[project]
name = "FoKL"
authors = [
    {name = "ESMS Group", email = "derek.slack.001@gmail.com"},
]
description = "Karhunen Loève decomposed Gaussian processes with forward variable selection"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "requests",
    'importlib-metadata; python_version<"3.8"',
    "Pyomo >= 6.7.0",
    "NumPy < 2.0.0",  # Pyomo uses 'float_' which was removed in NumPy 2.0
    "autograd",
    "matplotlib"
]
dynamic = ["version"]


