[metadata]
name = gha-python-packaging-demo
description = Demo of a simple way to use GitHub Actions to build your Python package, bump the version number, and publish it to GitHub releases and PyPI.org all with a single click of a button in the web interface.
long_description_content_type = text/markdown
url = https://github.com/derek-slack/FokLPackage
project_urls =
    Bug Tracker = https://github.com/derek-slack/FokLPackage/issues
    Changelog =https://github.com/derek-slack/FokLPackage/releases
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Intended Audience :: Developers

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

