[metadata]
name = FokL
description =FokL Machine Learning.
long_description_content_type = text/markdown
url = https://github.com/derek-slack/FokLPackage
project_urls =
    Bug Tracker = https://github.com/derek-slack/FokLPackage/issues
    Changelog =https://github.com/derek-slack/FokLPackage/releases
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Intended Audience :: Developers

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src

